--- a/index.html
+++ b/index.html
@@ -178,11 +178,8 @@
       <button id="noBtn">No</button>
     </section>
 
-    <!-- HINT -->
-    <div class="hint" id="hint">“No” seems a bit shy 😈</div>
-
     <section class="result" id="result">
-      <h2>YAY! 🎉</h2>
+      <h2>YAY!!!!</h2>
       <img
         class="fireworks"
         src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
@@ -300,6 +297,7 @@
   </script>
 </body>
 </html>
+
 
 
 
