--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
       <button id="noBtn">No</button>
     </section>
 
+    <div class="hint" id="hint">“No” isn't an option 😊</div>
+    
     <section class="result" id="result">
       <h2>YAY!!!!</h2>
       <img
@@ -297,6 +299,7 @@
   </script>
 </body>
 </html>
+
 
 
 
