--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Will you be my Valentine?</title>
 
-  <!-- Confetti -->
+  <!-- Confetti library -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
-  <!-- YouTube IFrame API (loads immediately) -->
+  <!-- YouTube IFrame API (loads immediately so playback is instant on click) -->
   <script src="https://www.youtube.com/iframe_api"></script>
 
   <style>
@@ -33,6 +33,7 @@
       padding: 16px;
     }
 
+    /* FULL-SCREEN CONFETTI CANVAS */
     #confettiCanvas {
       position: fixed;
       inset: 0;
@@ -83,6 +84,8 @@
       border: none;
       cursor: pointer;
       box-shadow: 0 10px 24px rgba(0,0,0,.14);
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
       transition: transform .12s ease, background .12s ease;
     }
 
@@ -91,7 +94,6 @@
       background: var(--yes);
       color: #fff;
     }
-
     #yesBtn:hover { background: var(--yesHover); }
 
     #noBtn {
@@ -133,10 +135,48 @@
 <body>
   <canvas id="confettiCanvas"></canvas>
 
-  <!-- Hidden YouTube player (preloaded) -->
+  <!-- Hidden YouTube player (preloaded on page load) -->
   <div id="ytPlayer" style="position: fixed; left: -9999px; top: -9999px;"></div>
 
   <main class="card">
+    <!-- ANIMAL WITH HEART -->
+    <svg class="art" viewBox="0 0 320 240" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <linearGradient id="fur" x1="0" x2="1">
+          <stop offset="0" stop-color="#f7c7a1"/>
+          <stop offset="1" stop-color="#f2a97b"/>
+        </linearGradient>
+        <linearGradient id="heart" x1="0" x2="1">
+          <stop offset="0" stop-color="#ff4d7d"/>
+          <stop offset="1" stop-color="#ff1f68"/>
+        </linearGradient>
+      </defs>
+
+      <path d="M250 50 C250 33 270 25 282 38
+               C294 25 314 33 314 50
+               C314 78 282 92 282 106
+               C282 92 250 78 250 50Z"
+            fill="url(#heart)"/>
+
+      <path d="M90 120 C90 70 140 40 190 60
+               C240 40 290 70 290 120
+               C290 180 240 210 190 210
+               C140 210 90 180 90 120Z"
+            fill="url(#fur)"/>
+
+      <path d="M110 92 L95 55 L140 78 Z" fill="#f2a97b"/>
+      <path d="M270 92 L285 55 L240 78 Z" fill="#f2a97b"/>
+
+      <circle cx="160" cy="130" r="8"/>
+      <circle cx="220" cy="130" r="8"/>
+
+      <path d="M190 144 C186 144 182 148 182 152
+               C182 160 190 164 190 170
+               C190 164 198 160 198 152
+               C198 148 194 144 190 144Z"
+            fill="#ff7aa2"/>
+    </svg>
+
     <h1>Candice will you be my valentine?</h1>
 
     <section class="button-zone" id="zone">
@@ -168,14 +208,15 @@
 
     function resizeConfettiCanvas() {
       const dpr = Math.max(1, window.devicePixelRatio || 1);
-      confettiCanvas.width = innerWidth * dpr;
-      confettiCanvas.height = innerHeight * dpr;
+      confettiCanvas.width = Math.floor(window.innerWidth * dpr);
+      confettiCanvas.height = Math.floor(window.innerHeight * dpr);
       confettiCanvas.style.width = "100vw";
       confettiCanvas.style.height = "100vh";
     }
 
     resizeConfettiCanvas();
     window.addEventListener("resize", resizeConfettiCanvas);
+    window.addEventListener("orientationchange", () => setTimeout(resizeConfettiCanvas, 150));
 
     const confettiInstance = confetti.create(confettiCanvas, {
       resize: false,
@@ -207,49 +248,77 @@
       }, 300);
     }
 
-    /* ---------- NO BUTTON ESCAPES ---------- */
+    /* ---------- YES BUTTON GROWS ---------- */
+    let yesScale = 1;
+    function growYes() {
+      yesScale = Math.min(2.2, yesScale + 0.1);
+      yesBtn.style.transform = `translateY(-50%) scale(${yesScale})`;
+    }
+
+    /* ---------- NO BUTTON RUNS AWAY (original physics) ---------- */
     function clamp(n, min, max) {
       return Math.max(min, Math.min(max, n));
     }
 
+    function moveNo(px, py) {
+      const z = zone.getBoundingClientRect();
+      const b = noBtn.getBoundingClientRect();
+
+      let dx = (b.left + b.width / 2) - px;
+      let dy = (b.top + b.height / 2) - py;
+      let mag = Math.hypot(dx, dy) || 1;
+      dx /= mag;
+      dy /= mag;
+
+      let newLeft = (b.left - z.left) + dx * 150;
+      let newTop  = (b.top - z.top) + dy * 150;
+
+      newLeft = clamp(newLeft, 0, z.width - b.width);
+      newTop  = clamp(newTop, 0, z.height - b.height);
+
+      noBtn.style.left = newLeft + "px";
+      noBtn.style.top = newTop + "px";
+      noBtn.style.transform = "none";
+
+      growYes();
+    }
+
     zone.addEventListener("pointermove", e => {
       const b = noBtn.getBoundingClientRect();
-      const z = zone.getBoundingClientRect();
       const d = Math.hypot(
         (b.left + b.width / 2) - e.clientX,
         (b.top + b.height / 2) - e.clientY
       );
-
-      if (d < 140) {
-        noBtn.style.left =
-          clamp(Math.random() * (z.width - b.width), 0, z.width - b.width) + "px";
-        noBtn.style.top =
-          clamp(Math.random() * (z.height - b.height), 0, z.height - b.height) + "px";
-      }
+      if (d < 140) moveNo(e.clientX, e.clientY);
     });
 
     noBtn.addEventListener("click", e => e.preventDefault());
 
-    /* ---------- YOUTUBE (PRELOADED) ---------- */
+    /* ---------- YOUTUBE (PRELOAD AT 0:20) ---------- */
     const VIDEO_ID = "N5PdvXVXh1c";
-    let ytPlayer;
+    const START_SECONDS = 20;
 
+    let ytPlayer = null;
+    let ytReady = false;
+
+    // Called automatically by the YouTube IFrame API
     window.onYouTubeIframeAPIReady = () => {
       ytPlayer = new YT.Player("ytPlayer", {
         videoId: VIDEO_ID,
         playerVars: {
+          autoplay: 0,
           controls: 0,
           disablekb: 1,
+          fs: 0,
+          modestbranding: 1,
           playsinline: 1,
-          start: 20
+          rel: 0
         },
         events: {
-          onReady: e => {
-            // Preload video at 20s WITHOUT playing
-            e.target.cueVideoById({
-              videoId: VIDEO_ID,
-              startSeconds: 20
-            });
+          onReady: (e) => {
+            ytReady = true;
+            // Preload/cue at 20s WITHOUT playing
+            e.target.cueVideoById({ videoId: VIDEO_ID, startSeconds: START_SECONDS });
             e.target.setVolume(100);
           }
         }
@@ -262,10 +331,19 @@
       hint.style.display = "none";
       result.style.display = "block";
 
-      // Instant playback (already loaded)
-      ytPlayer.playVideo();
-
+      resizeConfettiCanvas();
       fullScreenConfetti();
+
+      // Start music instantly (already preloaded), at 0:20
+      if (ytReady && ytPlayer) {
+        ytPlayer.seekTo(START_SECONDS, true);
+        ytPlayer.unMute();
+        ytPlayer.setVolume(100);
+        ytPlayer.playVideo();
+      } else {
+        // Fallback (rare): open YouTube at 0:20
+        window.open(`https://www.youtube.com/watch?v=${VIDEO_ID}&t=${START_SECONDS}s`, "_blank");
+      }
     });
   </script>
 </body>
