--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <div class="hint" id="hint">“No” isn't an option 😊</div>
 
     <section class="result" id="result">
-      <h2>YAY!!!!</h2>
+      <h2>YAY!!!!! and many more Valentines to come!!!</h2>
       <img
         class="fireworks"
         src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
@@ -416,6 +416,7 @@
   </script>
 </body>
 </html>
+
 
 
 
