--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
       padding: 16px;
     }
 
-    /* ---------- HEART PHOTOS ---------- */
     .heart-img {
       position: fixed;
       width: 560px;
@@ -41,133 +40,97 @@
       object-fit: cover;
       object-position: center 10%;
       clip-path: polygon(
-        50% 90%,
-        10% 55%,
-        0% 35%,
-        10% 15%,
-        30% 10%,
-        50% 25%,
-        70% 10%,
-        90% 15%,
-        100% 35%,
-        90% 55%
+        50% 90%,10% 55%,0% 35%,10% 15%,30% 10%,
+        50% 25%,70% 10%,90% 15%,100% 35%,90% 55%
       );
       filter: drop-shadow(0 18px 30px rgba(0,0,0,.35));
       pointer-events: none;
       z-index: 2;
       transform: rotate(var(--rot, 0deg));
       animation: float 6s ease-in-out infinite;
-      transform-origin: center;
     }
 
-    .left.top    { left: 2vw;  top: 10vh; animation-delay: 0s; }
-    .left.bottom { left: 4vw;  bottom: 10vh; animation-delay: 1s; }
-    .right.top   { right: 2vw; top: 10vh; animation-delay: .5s; }
-    .right.bottom{ right: 4vw; bottom: 10vh; animation-delay: 1.5s; }
+    .left.top{left:2vw;top:10vh}
+    .left.bottom{left:4vw;bottom:10vh}
+    .right.top{right:2vw;top:10vh}
+    .right.bottom{right:4vw;bottom:10vh}
 
-    @keyframes float {
-      0%,100% { transform: translateY(0) rotate(var(--rot, 0deg)); }
-      50%     { transform: translateY(-18px) rotate(var(--rot, 0deg)); }
+    @keyframes float{
+      0%,100%{transform:translateY(0) rotate(var(--rot))}
+      50%{transform:translateY(-18px) rotate(var(--rot))}
     }
 
-    /* ---------- CONFETTI CANVAS ---------- */
-    #confettiCanvas {
-      position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      pointer-events: none;
-      z-index: 9999;
+    #confettiCanvas{
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      z-index:9999;
     }
 
-    .card {
-      width: min(720px, 92vw);
-      padding: 26px 22px;
-      background: var(--card);
-      backdrop-filter: blur(10px);
-      border-radius: 22px;
-      text-align: center;
-      box-shadow: 0 18px 60px rgba(0,0,0,.15);
-      position: relative;
-      z-index: 3;
+    .card{
+      width:min(720px,92vw);
+      padding:26px 22px;
+      background:var(--card);
+      backdrop-filter:blur(10px);
+      border-radius:22px;
+      text-align:center;
+      box-shadow:0 18px 60px rgba(0,0,0,.15);
+      z-index:3;
     }
 
-    /* ---------- RAT IMAGE ---------- */
-    .art {
-      width: min(260px, 80vw);
-      margin: 0 auto 10px;
-      display: block;
-      filter: drop-shadow(0 10px 14px rgba(0,0,0,.12));
-      animation: bob 2.6s ease-in-out infinite;
+    .art{
+      width:min(260px,80vw);
+      margin:0 auto 10px;
+      display:block;
+      filter:drop-shadow(0 10px 14px rgba(0,0,0,.12));
+      animation:bob 2.6s ease-in-out infinite;
     }
 
-    @keyframes bob {
-      0%,100% { transform: translateY(0); }
-      50% { transform: translateY(-6px); }
+    @keyframes bob{
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-6px)}
     }
 
-    h1 {
-      font-size: clamp(26px, 4vw, 44px);
-      margin: 12px 0 18px;
+    h1{
+      font-size:clamp(26px,4vw,44px);
+      margin:12px 0 18px;
     }
 
-    .button-zone {
-      position: relative;
-      width: min(520px, 92%);
-      height: 150px;
-      margin: 0 auto;
-      touch-action: none;
+    .button-zone{
+      position:relative;
+      width:min(520px,92%);
+      height:150px;
+      margin:0 auto;
+      touch-action:none;
     }
 
-    button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      padding: 16px 24px;
-      font-size: 18px;
-      font-weight: 800;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      box-shadow: 0 10px 24px rgba(0,0,0,.14);
-      user-select: none;
-      -webkit-tap-highlight-color: transparent;
-      transition: transform .12s ease, background .12s ease;
+    button{
+      position:absolute;
+      top:50%;
+      transform:translateY(-50%);
+      padding:16px 24px;
+      font-size:18px;
+      font-weight:800;
+      border-radius:999px;
+      border:none;
+      cursor:pointer;
+      box-shadow:0 10px 24px rgba(0,0,0,.14);
     }
 
-    #yesBtn { left: 18%; background: var(--yes); color: #fff; }
-    #yesBtn:hover { background: var(--yesHover); }
+    #yesBtn{left:18%;background:var(--yes);color:#fff}
+    #noBtn{left:62%;background:#e5e7eb;color:#111827}
 
-    #noBtn { left: 62%; background: #e5e7eb; color: #111827; }
+    .hint{margin-top:10px;font-size:13px;opacity:.7}
 
-    .hint {
-      margin-top: 10px;
-      font-size: 13px;
-      opacity: .7;
+    .result{
+      display:none;
+      margin-top:18px;
+      animation:pop .35s ease;
     }
 
-    .result {
-      display: none;
-      margin-top: 18px;
-      animation: pop .35s ease;
-    }
-
-    .result h2 {
-      font-size: clamp(30px, 4.5vw, 46px);
-      margin: 10px 0;
-    }
-
-    @keyframes pop {
-      from { transform: scale(.96); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
-
-    @media (max-width: 520px) {
-      .heart-img { width: 240px; height: 240px; }
-      .left.top { left: -6vw; top: 8vh; }
-      .right.top { right: -6vw; top: 8vh; }
-      .left.bottom { left: -4vw; bottom: 8vh; }
-      .right.bottom { right: -4vw; bottom: 8vh; }
+    @keyframes pop{
+      from{transform:scale(.96);opacity:0}
+      to{transform:scale(1);opacity:1}
     }
   </style>
 </head>
@@ -175,17 +138,15 @@
 <body>
   <canvas id="confettiCanvas"></canvas>
 
-  <!-- HEART PHOTOS -->
-  <img src="candi1.jpg" class="heart-img left top" alt="Candice 1">
-  <img src="candi2.jpg" class="heart-img left bottom" alt="Candice 2">
-  <img src="candi3.jpg" class="heart-img right top" alt="Candice 3">
-  <img src="candi4.jpg" class="heart-img right bottom" alt="Candice 4">
+  <img src="candi1.jpg" class="heart-img left top">
+  <img src="candi2.jpg" class="heart-img left bottom">
+  <img src="candi3.jpg" class="heart-img right top">
+  <img src="candi4.jpg" class="heart-img right bottom">
 
-  <!-- Hidden YouTube player -->
-  <div id="ytPlayer" style="position: fixed; left:-9999px; top:-9999px;"></div>
+  <div id="ytPlayer" style="position:fixed;left:-9999px;top:-9999px"></div>
 
   <main class="card">
-    <img src="rat.png" alt="Cute rat with heart" class="art" />
+    <img src="rat.png" class="art">
 
     <h1>Candice will you be my valentine?</h1>
 
@@ -198,180 +159,87 @@
 
     <section class="result" id="result">
       <h2>YAY!!!!! and many more Valentine’s Days to come!!!</h2>
-      <img
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
-        alt="Fireworks"
-        style="width:min(380px,90vw); display:block; margin:0 auto;"
-      />
+      <img src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif" width="320">
     </section>
   </main>
 
   <script>
-    const zone = document.getElementById("zone");
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-    const result = document.getElementById("result");
-    const hint = document.getElementById("hint");
+    const zone=document.getElementById("zone");
+    const yesBtn=document.getElementById("yesBtn");
+    const noBtn=document.getElementById("noBtn");
+    const result=document.getElementById("result");
+    const hint=document.getElementById("hint");
 
-    /* ---------- RANDOM HEART ROTATION ---------- */
-    document.querySelectorAll(".heart-img").forEach((img, i) => {
-      const angle = (Math.random() * 36) - 18;
-      const nudge = (i % 2 === 0) ? -4 : 4;
-      img.style.setProperty("--rot", (angle + nudge) + "deg");
+    document.querySelectorAll(".heart-img").forEach((img,i)=>{
+      img.style.setProperty("--rot",((Math.random()*36)-18+(i%2?-4:4))+"deg");
     });
 
-    /* ---------- CONFETTI ---------- */
-    const confettiCanvas = document.getElementById("confettiCanvas");
+    const confettiCanvas=document.getElementById("confettiCanvas");
+    const confettiInstance=confetti.create(confettiCanvas,{resize:true});
 
-    function resizeConfettiCanvas() {
-      const dpr = Math.max(1, window.devicePixelRatio || 1);
-      confettiCanvas.width = Math.floor(window.innerWidth * dpr);
-      confettiCanvas.height = Math.floor(window.innerHeight * dpr);
-      confettiCanvas.style.width = "100vw";
-      confettiCanvas.style.height = "100vh";
+    function blast(){
+      confettiInstance({particleCount:300,spread:140,startVelocity:60});
     }
 
-    resizeConfettiCanvas();
-    window.addEventListener("resize", resizeConfettiCanvas);
-    window.addEventListener("orientationchange", () => setTimeout(resizeConfettiCanvas, 150));
+    let yesScale=1;
 
-    const confettiInstance = confetti.create(confettiCanvas, {
-      resize: false,
-      useWorker: true
-    });
-
-    function fullScreenConfetti() {
-      const end = Date.now() + 1600;
-
-      (function frame() {
-        confettiInstance({
-          particleCount: 12,
-          spread: 90,
-          startVelocity: 45,
-          ticks: 180,
-          origin: { x: Math.random(), y: Math.random() * 0.3 }
-        });
-        if (Date.now() < end) requestAnimationFrame(frame);
-      })();
-
-      setTimeout(() => {
-        confettiInstance({
-          particleCount: 300,
-          spread: 140,
-          startVelocity: 60,
-          ticks: 220,
-          origin: { x: 0.5, y: 0.55 }
-        });
-      }, 300);
+    function growYes(){
+      yesScale=Math.min(2.2,yesScale+.1);
+      yesBtn.style.transform=`translateY(-50%) scale(${yesScale})`;
     }
 
-    /* ---------- YES BUTTON GROWS ---------- */
-    let yesScale = 1;
-    function growYes() {
-      yesScale = Math.min(2.2, yesScale + 0.1);
-      yesBtn.style.transform = `translateY(-50%) scale(${yesScale})`;
-    }
-
-    /* ---------- NO BUTTON RUNS AWAY ---------- */
-    function clamp(n, min, max) {
-      return Math.max(min, Math.min(max, n));
-    }
-
-    function moveNo(px, py) {
-      const z = zone.getBoundingClientRect();
-      const b = noBtn.getBoundingClientRect();
-
-      let dx = (b.left + b.width / 2) - px;
-      let dy = (b.top + b.height / 2) - py;
-      let mag = Math.hypot(dx, dy) || 1;
-      dx /= mag;
-      dy /= mag;
-
-      let newLeft = (b.left - z.left) + dx * 150;
-      let newTop  = (b.top - z.top) + dy * 150;
-
-      newLeft = clamp(newLeft, 0, z.width - b.width);
-      newTop  = clamp(newTop, 0, z.height - b.height);
-
-      noBtn.style.left = newLeft + "px";
-      noBtn.style.top = newTop + "px";
-      noBtn.style.transform = "none";
-
+    function moveNo(px,py){
+      const z=zone.getBoundingClientRect();
+      const b=noBtn.getBoundingClientRect();
+      let dx=(b.left+b.width/2)-px;
+      let dy=(b.top+b.height/2)-py;
+      let m=Math.hypot(dx,dy)||1;
+      dx/=m;dy/=m;
+      noBtn.style.left=Math.max(0,Math.min((b.left-z.left)+dx*150,z.width-b.width))+"px";
+      noBtn.style.top=Math.max(0,Math.min((b.top-z.top)+dy*150,z.height-b.height))+"px";
       growYes();
     }
 
-    zone.addEventListener("pointermove", e => {
-      const b = noBtn.getBoundingClientRect();
-      const d = Math.hypot(
-        (b.left + b.width / 2) - e.clientX,
-        (b.top + b.height / 2) - e.clientY
-      );
-      if (d < 140) moveNo(e.clientX, e.clientY);
+    zone.addEventListener("pointermove",e=>{
+      const b=noBtn.getBoundingClientRect();
+      if(Math.hypot((b.left+b.width/2)-e.clientX,(b.top+b.height/2)-e.clientY)<140){
+        moveNo(e.clientX,e.clientY);
+      }
     });
 
-    noBtn.addEventListener("click", e => e.preventDefault());
+    noBtn.onclick=e=>e.preventDefault();
 
-    /* ---------- YOUTUBE ---------- */
-    const VIDEO_ID = "N5PdvXVXh1c";
-    const START_SECONDS = 20;
+    const VIDEO_ID="N5PdvXVXh1c";
+    const START=20;
+    let player,ready=false;
 
-    let ytPlayer = null;
-    let ytReady = false;
-
-    window.onYouTubeIframeAPIReady = () => {
-      ytPlayer = new YT.Player("ytPlayer", {
-        videoId: VIDEO_ID,
-        playerVars: {
-          autoplay: 0,
-          controls: 0,
-          disablekb: 1,
-          fs: 0,
-          modestbranding: 1,
-          playsinline: 1,
-          rel: 0
-        },
-        events: {
-          onReady: (e) => {
-            ytReady = true;
-            e.target.cueVideoById({ videoId: VIDEO_ID, startSeconds: START_SECONDS });
-            e.target.setVolume(100);
+    window.onYouTubeIframeAPIReady=()=>{
+      player=new YT.Player("ytPlayer",{
+        videoId:VIDEO_ID,
+        playerVars:{playsinline:1,controls:0,mute:1},
+        events:{
+          onReady:e=>{
+            ready=true;
+            e.target.cueVideoById({videoId:VIDEO_ID,startSeconds:START});
           }
         }
       });
     };
 
-    /* ---------- YES CLICK ---------- */
-    yesBtn.addEventListener("click", async () => {
-      zone.style.display = "none";
-      hint.style.display = "none";
-      result.style.display = "block";
+    yesBtn.onclick=()=>{
+      zone.style.display="none";
+      hint.style.display="none";
+      result.style.display="block";
+      blast();
 
-      resizeConfettiCanvas();
-      fullScreenConfetti();
-
-      // The most reliable way on iOS is loadVideoById (not seekTo+play)
-      if (ytReady && ytPlayer) {
-        try {
-          ytPlayer.unMute();
-          ytPlayer.setVolume(100);
-          ytPlayer.loadVideoById({ videoId: VIDEO_ID, startSeconds: START_SECONDS });
-          const res = ytPlayer.playVideo();
-
-          // If blocked anyway, fallback
-          setTimeout(() => {
-            // Player state: -1 unstarted, 1 playing, 2 paused, 5 cued
-            const st = ytPlayer.getPlayerState?.();
-            if (st !== 1) {
-              window.open(`https://www.youtube.com/watch?v=${VIDEO_ID}&t=${START_SECONDS}s`, "_blank");
-            }
-          }, 900);
-        } catch {
-          window.open(`https://www.youtube.com/watch?v=${VIDEO_ID}&t=${START_SECONDS}s`, "_blank");
-        }
-      } else {
-        window.open(`https://www.youtube.com/watch?v=${VIDEO_ID}&t=${START_SECONDS}s`, "_blank");
+      if(ready){
+        player.loadVideoById({videoId:VIDEO_ID,startSeconds:START});
+        setTimeout(()=>{
+          player.unMute();
+          player.setVolume(100);
+        },400);
       }
-    });
+    };
   </script>
 </body>
 </html>
